# power_flow

./: .gitignore  LICENSE  README.md  api.py  config.py  main.py  pyproject.toml
data/: IEEE14.json  IEEE14.lst  IEEE14.pwf
power_flow/: __init__.py  newtonraphson.py  ybus.py
power_flow/models/: __init__.py  branch.py  bus.py  generator.py  line.py  load.py  shunt.py  sistema.py  transformer.py
power_flow/readers/: __init__.py  base_reader.py  reader_json.py  reader_pwf.py
power_flow/solver/: __init__.py  convergence.py  jacobian.py  power_balance.py  residuals.py  update.py
power_flow/utils/: __init__.py  export.py  graficos.py  labels.py  logs.py
